l22_parser.output
Terminals unused in grammar

    tPRIVATE


Grammar

    0 $accept: file $end

    1 file: program
    2     | decls program

    3 program: tBEGIN block tEND

    4 decls: decl
    5      | decls decl

    6 decl: vardecl ';'
    7     | fundecl

    8 vardecl: tPUBLIC type tIDENTIFIER
    9        | tPUBLIC type tIDENTIFIER '=' expr
   10        | tPUBLIC tVAR tIDENTIFIER '=' expr
   11        | tPUBLIC tIDENTIFIER '=' expr
   12        | tUSE type tIDENTIFIER
   13        | tFOREIGN type tIDENTIFIER
   14        | var
   15        | type tIDENTIFIER '=' expr
   16        | tVAR tIDENTIFIER '=' expr

   17 fundecl: tPUBLIC type tIDENTIFIER '=' block_expr
   18        | tPUBLIC tVAR tIDENTIFIER '=' block_expr
   19        | tPUBLIC tIDENTIFIER '=' block_expr
   20        | tFOREIGN type tIDENTIFIER '=' block_expr
   21        | tFOREIGN tVAR tIDENTIFIER '=' block_expr
   22        | tFOREIGN tIDENTIFIER '=' block_expr
   23        | type tIDENTIFIER '=' block_expr
   24        | tVAR tIDENTIFIER '=' block_expr

   25 fun_def: '(' vars ')' tRETURN_TYPE type ':' block
   26        | '(' ')' tRETURN_TYPE type ':' block
   27        | '(' vars ')' tRETURN_TYPE type_void ':' block
   28        | '(' ')' tRETURN_TYPE type_void ':' block

   29 fun_call: expr '(' exprs ')'
   30         | expr '(' ')'
   31         | '@' '(' exprs ')'
   32         | '@' '(' ')'
   33         | '(' fun_def ')' '(' exprs ')'
   34         | '(' fun_def ')' '(' ')'

   35 vars: var
   36     | var ',' vars

   37 var: type tIDENTIFIER

   38 type: tINT_TYPE
   39     | tREAL_TYPE
   40     | tSTRING_TYPE
   41     | '[' type ']'
   42     | '[' type_void ']'
   43     | type_func

   44 type_void: tVOID_TYPE

   45 type_func: type '<' args '>'
   46          | type '<' '>'
   47          | type_void '<' args '>'
   48          | type_void '<' '>'

   49 args: type
   50     | type ',' args

   51 block: '{' instrs '}'
   52      | '{' decls '}'
   53      | '{' decls instrs '}'

   54 instrs: instr
   55       | block_instr
   56       | instr ';' instrs
   57       | block_instr instrs

   58 instr: tWRITE exprs
   59      | tWRITELN exprs
   60      | tAGAIN
   61      | tSTOP
   62      | tRETURN expr
   63      | tRETURN
   64      | expr
   65      | tWITH expr tCHANGE expr tRETURN_TYPE expr tDOTS expr
   66      | tWITH block_expr tCHANGE expr tRETURN_TYPE expr tDOTS expr
   67      | tSWEEP expr tRETURN_TYPE expr tDOTS expr tWITH expr tIF expr
   68      | tSWEEP expr tRETURN_TYPE expr tDOTS expr tWITH block_expr tIF expr

   69 block_instr: tIF '(' expr ')' tTHEN block
   70            | tIF '(' expr ')' tTHEN block elif
   71            | tWHILE '(' expr ')' tDO block
   72            | lval '=' block_expr
   73            | tRETURN fun_def

   74 elif: tELSE block
   75     | tELIF '(' expr ')' tTHEN block
   76     | tELIF '(' expr ')' tTHEN block elif

   77 exprs: expr
   78      | exprs ',' expr
   79      | block_expr
   80      | exprs ',' block_expr

   81 expr: tINTEGER
   82     | tREAL
   83     | string
   84     | tNULL
   85     | lval
   86     | lval '=' expr
   87     | expr '+' expr
   88     | expr '-' expr
   89     | expr '*' expr
   90     | expr '/' expr
   91     | expr '%' expr
   92     | expr '|' expr
   93     | expr '&' expr
   94     | expr '<' expr
   95     | expr '>' expr
   96     | expr tGE expr
   97     | expr tLE expr
   98     | expr tNE expr
   99     | expr tEQ expr
  100     | tNOT expr
  101     | '+' expr
  102     | '-' expr
  103     | '(' expr ')'
  104     | tSIZEOF '(' expr ')'
  105     | '[' expr ']'
  106     | lval '?'
  107     | tINPUT
  108     | fun_call

  109 block_expr: fun_def
  110           | lval '=' block_expr

  111 lval: tIDENTIFIER
  112     | expr '[' expr ']'

  113 string: tSTRING
  114       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 91
    '&' (38) 93
    '(' (40) 25 26 27 28 29 30 31 32 33 34 69 70 71 75 76 103 104
    ')' (41) 25 26 27 28 29 30 31 32 33 34 69 70 71 75 76 103 104
    '*' (42) 89
    '+' (43) 87 101
    ',' (44) 36 50 78 80
    '-' (45) 88 102
    '/' (47) 90
    ':' (58) 25 26 27 28
    ';' (59) 6 56
    '<' (60) 45 46 47 48 94
    '=' (61) 9 10 11 15 16 17 18 19 20 21 22 23 24 72 86 110
    '>' (62) 45 46 47 48 95
    '?' (63) 106
    '@' (64) 31 32
    '[' (91) 41 42 105 112
    ']' (93) 41 42 105 112
    '{' (123) 51 52 53
    '|' (124) 92
    '}' (125) 51 52 53
    error (256)
    tINTEGER <i> (258) 81
    tFOREIGN <i> (259) 13 20 21 22
    tUSE <i> (260) 12
    tPUBLIC <i> (261) 8 9 10 11 17 18 19
    tPRIVATE <i> (262)
    tREAL <d> (263) 82
    tIDENTIFIER <s> (264) 8 9 10 11 12 13 15 16 17 18 19 20 21 22 23 24 37 111
    tSTRING <s> (265) 113 114
    tBEGIN <s> (266) 3
    tEND <s> (267) 3
    tINT_TYPE <type> (268) 38
    tREAL_TYPE <type> (269) 39
    tSTRING_TYPE <type> (270) 40
    tVOID_TYPE <type> (271) 44
    tVAR <type> (272) 10 16 18 21 24
    tWHILE (273) 71
    tDO (274) 71
    tIF (275) 67 68 69 70
    tTHEN (276) 69 70 75 76
    tELSE (277) 74
    tELIF (278) 75 76
    tWRITE (279) 58
    tWRITELN (280) 59
    tINPUT (281) 107
    tSTOP (282) 61
    tAGAIN (283) 60
    tRETURN (284) 62 63 73
    tRETURN_TYPE (285) 25 26 27 28 65 66 67 68
    tSIZEOF (286) 104
    tNULL (287) 84
    tNOT (288) 100
    tUNARY (289)
    tCHANGE (290) 65 66
    tWITH (291) 65 66 67 68
    tDOTS (292) 65 66 67 68
    tSWEEP (293) 67 68
    tEQ (294) 99
    tNE (295) 98
    tGE (296) 96
    tLE (297) 97


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    file <sequence> (65)
        on left: 1 2
        on right: 0
    program <node> (66)
        on left: 3
        on right: 1 2
    decls <sequence> (67)
        on left: 4 5
        on right: 2 5 52 53
    decl <node> (68)
        on left: 6 7
        on right: 4 5
    vardecl <node> (69)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 6
    fundecl <node> (70)
        on left: 17 18 19 20 21 22 23 24
        on right: 7
    fun_def <expression> (71)
        on left: 25 26 27 28
        on right: 33 34 73 109
    fun_call <expression> (72)
        on left: 29 30 31 32 33 34
        on right: 108
    vars <sequence> (73)
        on left: 35 36
        on right: 25 27 36
    var <node> (74)
        on left: 37
        on right: 14 35 36
    type <type> (75)
        on left: 38 39 40 41 42 43
        on right: 8 9 12 13 15 17 20 23 25 26 37 41 45 46 49 50
    type_void <type> (76)
        on left: 44
        on right: 27 28 42 47 48
    type_func <type> (77)
        on left: 45 46 47 48
        on right: 43
    args <iotypes> (78)
        on left: 49 50
        on right: 45 47 50
    block <block> (79)
        on left: 51 52 53
        on right: 3 25 26 27 28 69 70 71 74 75 76
    instrs <sequence> (80)
        on left: 54 55 56 57
        on right: 51 53 56 57
    instr <node> (81)
        on left: 58 59 60 61 62 63 64 65 66 67 68
        on right: 54 56
    block_instr <node> (82)
        on left: 69 70 71 72 73
        on right: 55 57
    elif <node> (83)
        on left: 74 75 76
        on right: 70 76
    exprs <sequence> (84)
        on left: 77 78 79 80
        on right: 29 31 33 58 59 78 80
    expr <expression> (85)
        on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
        on right: 9 10 11 15 16 29 30 62 64 65 66 67 68 69 70 71 75 76 77 78 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 112
    block_expr <expression> (86)
        on left: 109 110
        on right: 17 18 19 20 21 22 23 24 66 68 72 79 80 110
    lval <lvalue> (87)
        on left: 111 112
        on right: 72 85 86 106 110
    string <s> (88)
        on left: 113 114
        on right: 83 114


State 0

    0 $accept: . file $end

    tFOREIGN      shift, and go to state 1
    tUSE          shift, and go to state 2
    tPUBLIC       shift, and go to state 3
    tBEGIN        shift, and go to state 4
    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    tVAR          shift, and go to state 9
    '['           shift, and go to state 10

    file       go to state 11
    program    go to state 12
    decls      go to state 13
    decl       go to state 14
    vardecl    go to state 15
    fundecl    go to state 16
    var        go to state 17
    type       go to state 18
    type_void  go to state 19
    type_func  go to state 20


State 1

   13 vardecl: tFOREIGN . type tIDENTIFIER
   20 fundecl: tFOREIGN . type tIDENTIFIER '=' block_expr
   21        | tFOREIGN . tVAR tIDENTIFIER '=' block_expr
   22        | tFOREIGN . tIDENTIFIER '=' block_expr

    tIDENTIFIER   shift, and go to state 21
    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    tVAR          shift, and go to state 22
    '['           shift, and go to state 10

    type       go to state 23
    type_void  go to state 19
    type_func  go to state 20


State 2

   12 vardecl: tUSE . type tIDENTIFIER

    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    '['           shift, and go to state 10

    type       go to state 24
    type_void  go to state 19
    type_func  go to state 20


State 3

    8 vardecl: tPUBLIC . type tIDENTIFIER
    9        | tPUBLIC . type tIDENTIFIER '=' expr
   10        | tPUBLIC . tVAR tIDENTIFIER '=' expr
   11        | tPUBLIC . tIDENTIFIER '=' expr
   17 fundecl: tPUBLIC . type tIDENTIFIER '=' block_expr
   18        | tPUBLIC . tVAR tIDENTIFIER '=' block_expr
   19        | tPUBLIC . tIDENTIFIER '=' block_expr

    tIDENTIFIER   shift, and go to state 25
    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    tVAR          shift, and go to state 26
    '['           shift, and go to state 10

    type       go to state 27
    type_void  go to state 19
    type_func  go to state 20


State 4

    3 program: tBEGIN . block tEND

    '{'  shift, and go to state 28

    block  go to state 29


State 5

   38 type: tINT_TYPE .

    $default  reduce using rule 38 (type)


State 6

   39 type: tREAL_TYPE .

    $default  reduce using rule 39 (type)


State 7

   40 type: tSTRING_TYPE .

    $default  reduce using rule 40 (type)


State 8

   44 type_void: tVOID_TYPE .

    $default  reduce using rule 44 (type_void)


State 9

   16 vardecl: tVAR . tIDENTIFIER '=' expr
   24 fundecl: tVAR . tIDENTIFIER '=' block_expr

    tIDENTIFIER  shift, and go to state 30


State 10

   41 type: '[' . type ']'
   42     | '[' . type_void ']'

    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    '['           shift, and go to state 10

    type       go to state 31
    type_void  go to state 32
    type_func  go to state 20


State 11

    0 $accept: file . $end

    $end  shift, and go to state 33


State 12

    1 file: program .

    $default  reduce using rule 1 (file)


State 13

    2 file: decls . program
    5 decls: decls . decl

    tFOREIGN      shift, and go to state 1
    tUSE          shift, and go to state 2
    tPUBLIC       shift, and go to state 3
    tBEGIN        shift, and go to state 4
    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    tVAR          shift, and go to state 9
    '['           shift, and go to state 10

    program    go to state 34
    decl       go to state 35
    vardecl    go to state 15
    fundecl    go to state 16
    var        go to state 17
    type       go to state 18
    type_void  go to state 19
    type_func  go to state 20


State 14

    4 decls: decl .

    $default  reduce using rule 4 (decls)


State 15

    6 decl: vardecl . ';'

    ';'  shift, and go to state 36


State 16

    7 decl: fundecl .

    $default  reduce using rule 7 (decl)


State 17

   14 vardecl: var .

    $default  reduce using rule 14 (vardecl)


State 18

   15 vardecl: type . tIDENTIFIER '=' expr
   23 fundecl: type . tIDENTIFIER '=' block_expr
   37 var: type . tIDENTIFIER
   45 type_func: type . '<' args '>'
   46          | type . '<' '>'

    tIDENTIFIER  shift, and go to state 37
    '<'          shift, and go to state 38


State 19

   47 type_func: type_void . '<' args '>'
   48          | type_void . '<' '>'

    '<'  shift, and go to state 39


State 20

   43 type: type_func .

    $default  reduce using rule 43 (type)


State 21

   22 fundecl: tFOREIGN tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 40


State 22

   21 fundecl: tFOREIGN tVAR . tIDENTIFIER '=' block_expr

    tIDENTIFIER  shift, and go to state 41


State 23

   13 vardecl: tFOREIGN type . tIDENTIFIER
   20 fundecl: tFOREIGN type . tIDENTIFIER '=' block_expr
   45 type_func: type . '<' args '>'
   46          | type . '<' '>'

    tIDENTIFIER  shift, and go to state 42
    '<'          shift, and go to state 38


State 24

   12 vardecl: tUSE type . tIDENTIFIER
   45 type_func: type . '<' args '>'
   46          | type . '<' '>'

    tIDENTIFIER  shift, and go to state 43
    '<'          shift, and go to state 38


State 25

   11 vardecl: tPUBLIC tIDENTIFIER . '=' expr
   19 fundecl: tPUBLIC tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 44


State 26

   10 vardecl: tPUBLIC tVAR . tIDENTIFIER '=' expr
   18 fundecl: tPUBLIC tVAR . tIDENTIFIER '=' block_expr

    tIDENTIFIER  shift, and go to state 45


State 27

    8 vardecl: tPUBLIC type . tIDENTIFIER
    9        | tPUBLIC type . tIDENTIFIER '=' expr
   17 fundecl: tPUBLIC type . tIDENTIFIER '=' block_expr
   45 type_func: type . '<' args '>'
   46          | type . '<' '>'

    tIDENTIFIER  shift, and go to state 46
    '<'          shift, and go to state 38


State 28

   51 block: '{' . instrs '}'
   52      | '{' . decls '}'
   53      | '{' . decls instrs '}'

    tINTEGER      shift, and go to state 47
    tFOREIGN      shift, and go to state 1
    tUSE          shift, and go to state 2
    tPUBLIC       shift, and go to state 3
    tREAL         shift, and go to state 48
    tIDENTIFIER   shift, and go to state 49
    tSTRING       shift, and go to state 50
    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    tVAR          shift, and go to state 9
    tWHILE        shift, and go to state 51
    tIF           shift, and go to state 52
    tWRITE        shift, and go to state 53
    tWRITELN      shift, and go to state 54
    tINPUT        shift, and go to state 55
    tSTOP         shift, and go to state 56
    tAGAIN        shift, and go to state 57
    tRETURN       shift, and go to state 58
    tSIZEOF       shift, and go to state 59
    tNULL         shift, and go to state 60
    tNOT          shift, and go to state 61
    tWITH         shift, and go to state 62
    tSWEEP        shift, and go to state 63
    '+'           shift, and go to state 64
    '-'           shift, and go to state 65
    '('           shift, and go to state 66
    '['           shift, and go to state 67
    '@'           shift, and go to state 68

    decls        go to state 69
    decl         go to state 14
    vardecl      go to state 15
    fundecl      go to state 16
    fun_call     go to state 70
    var          go to state 17
    type         go to state 18
    type_void    go to state 19
    type_func    go to state 20
    instrs       go to state 71
    instr        go to state 72
    block_instr  go to state 73
    expr         go to state 74
    lval         go to state 75
    string       go to state 76


State 29

    3 program: tBEGIN block . tEND

    tEND  shift, and go to state 77


State 30

   16 vardecl: tVAR tIDENTIFIER . '=' expr
   24 fundecl: tVAR tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 78


State 31

   41 type: '[' type . ']'
   45 type_func: type . '<' args '>'
   46          | type . '<' '>'

    '<'  shift, and go to state 38
    ']'  shift, and go to state 79


State 32

   42 type: '[' type_void . ']'
   47 type_func: type_void . '<' args '>'
   48          | type_void . '<' '>'

    '<'  shift, and go to state 39
    ']'  shift, and go to state 80


State 33

    0 $accept: file $end .

    $default  accept


State 34

    2 file: decls program .

    $default  reduce using rule 2 (file)


State 35

    5 decls: decls decl .

    $default  reduce using rule 5 (decls)


State 36

    6 decl: vardecl ';' .

    $default  reduce using rule 6 (decl)


State 37

   15 vardecl: type tIDENTIFIER . '=' expr
   23 fundecl: type tIDENTIFIER . '=' block_expr
   37 var: type tIDENTIFIER .

    '='  shift, and go to state 81

    $default  reduce using rule 37 (var)


State 38

   45 type_func: type '<' . args '>'
   46          | type '<' . '>'

    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    '>'           shift, and go to state 82
    '['           shift, and go to state 10

    type       go to state 83
    type_void  go to state 19
    type_func  go to state 20
    args       go to state 84


State 39

   47 type_func: type_void '<' . args '>'
   48          | type_void '<' . '>'

    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    '>'           shift, and go to state 85
    '['           shift, and go to state 10

    type       go to state 83
    type_void  go to state 19
    type_func  go to state 20
    args       go to state 86


State 40

   22 fundecl: tFOREIGN tIDENTIFIER '=' . block_expr

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 87
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_def     go to state 89
    fun_call    go to state 70
    expr        go to state 90
    block_expr  go to state 91
    lval        go to state 92
    string      go to state 76


State 41

   21 fundecl: tFOREIGN tVAR tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 93


State 42

   13 vardecl: tFOREIGN type tIDENTIFIER .
   20 fundecl: tFOREIGN type tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 94

    $default  reduce using rule 13 (vardecl)


State 43

   12 vardecl: tUSE type tIDENTIFIER .

    $default  reduce using rule 12 (vardecl)


State 44

   11 vardecl: tPUBLIC tIDENTIFIER '=' . expr
   19 fundecl: tPUBLIC tIDENTIFIER '=' . block_expr

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 87
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_def     go to state 89
    fun_call    go to state 70
    expr        go to state 95
    block_expr  go to state 96
    lval        go to state 92
    string      go to state 76


State 45

   10 vardecl: tPUBLIC tVAR tIDENTIFIER . '=' expr
   18 fundecl: tPUBLIC tVAR tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 97


State 46

    8 vardecl: tPUBLIC type tIDENTIFIER .
    9        | tPUBLIC type tIDENTIFIER . '=' expr
   17 fundecl: tPUBLIC type tIDENTIFIER . '=' block_expr

    '='  shift, and go to state 98

    $default  reduce using rule 8 (vardecl)


State 47

   81 expr: tINTEGER .

    $default  reduce using rule 81 (expr)


State 48

   82 expr: tREAL .

    $default  reduce using rule 82 (expr)


State 49

  111 lval: tIDENTIFIER .

    $default  reduce using rule 111 (lval)


State 50

  113 string: tSTRING .

    $default  reduce using rule 113 (string)


State 51

   71 block_instr: tWHILE . '(' expr ')' tDO block

    '('  shift, and go to state 99


State 52

   69 block_instr: tIF . '(' expr ')' tTHEN block
   70            | tIF . '(' expr ')' tTHEN block elif

    '('  shift, and go to state 100


State 53

   58 instr: tWRITE . exprs

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 87
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_def     go to state 89
    fun_call    go to state 70
    exprs       go to state 101
    expr        go to state 102
    block_expr  go to state 103
    lval        go to state 92
    string      go to state 76


State 54

   59 instr: tWRITELN . exprs

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 87
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_def     go to state 89
    fun_call    go to state 70
    exprs       go to state 104
    expr        go to state 102
    block_expr  go to state 103
    lval        go to state 92
    string      go to state 76


State 55

  107 expr: tINPUT .

    $default  reduce using rule 107 (expr)


State 56

   61 instr: tSTOP .

    $default  reduce using rule 61 (instr)


State 57

   60 instr: tAGAIN .

    $default  reduce using rule 60 (instr)


State 58

   62 instr: tRETURN . expr
   63      | tRETURN .
   73 block_instr: tRETURN . fun_def

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 87
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    $default  reduce using rule 63 (instr)

    fun_def   go to state 105
    fun_call  go to state 70
    expr      go to state 106
    lval      go to state 107
    string    go to state 76


State 59

  104 expr: tSIZEOF . '(' expr ')'

    '('  shift, and go to state 108


State 60

   84 expr: tNULL .

    $default  reduce using rule 84 (expr)


State 61

  100 expr: tNOT . expr

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 66
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_call  go to state 70
    expr      go to state 109
    lval      go to state 107
    string    go to state 76


State 62

   65 instr: tWITH . expr tCHANGE expr tRETURN_TYPE expr tDOTS expr
   66      | tWITH . block_expr tCHANGE expr tRETURN_TYPE expr tDOTS expr

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 87
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_def     go to state 89
    fun_call    go to state 70
    expr        go to state 110
    block_expr  go to state 111
    lval        go to state 92
    string      go to state 76


State 63

   67 instr: tSWEEP . expr tRETURN_TYPE expr tDOTS expr tWITH expr tIF expr
   68      | tSWEEP . expr tRETURN_TYPE expr tDOTS expr tWITH block_expr tIF expr

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 66
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_call  go to state 70
    expr      go to state 112
    lval      go to state 107
    string    go to state 76


State 64

  101 expr: '+' . expr

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 66
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_call  go to state 70
    expr      go to state 113
    lval      go to state 107
    string    go to state 76


State 65

  102 expr: '-' . expr

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 66
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_call  go to state 70
    expr      go to state 114
    lval      go to state 107
    string    go to state 76


State 66

   33 fun_call: '(' . fun_def ')' '(' exprs ')'
   34         | '(' . fun_def ')' '(' ')'
  103 expr: '(' . expr ')'

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tINPUT       shift, and go to state 55
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 87
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    fun_def   go to state 115
    fun_call  go to state 70
    expr      go to state 116
    lval      go to state 107
    string    go to state 76


State 67

   41 type: '[' . type ']'
   42     | '[' . type_void ']'
  105 expr: '[' . expr ']'

    tINTEGER      shift, and go to state 47
    tREAL         shift, and go to state 48
    tIDENTIFIER   shift, and go to state 49
    tSTRING       shift, and go to state 50
    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    tINPUT        shift, and go to state 55
    tSIZEOF       shift, and go to state 59
    tNULL         shift, and go to state 60
    tNOT          shift, and go to state 61
    '+'           shift, and go to state 64
    '-'           shift, and go to state 65
    '('           shift, and go to state 66
    '['           shift, and go to state 67
    '@'           shift, and go to state 68

    fun_call   go to state 70
    type       go to state 31
    type_void  go to state 32
    type_func  go to state 20
    expr       go to state 117
    lval       go to state 107
    string     go to state 76


State 68

   31 fun_call: '@' . '(' exprs ')'
   32         | '@' . '(' ')'

    '('  shift, and go to state 118


State 69

    5 decls: decls . decl
   52 block: '{' decls . '}'
   53      | '{' decls . instrs '}'

    tINTEGER      shift, and go to state 47
    tFOREIGN      shift, and go to state 1
    tUSE          shift, and go to state 2
    tPUBLIC       shift, and go to state 3
    tREAL         shift, and go to state 48
    tIDENTIFIER   shift, and go to state 49
    tSTRING       shift, and go to state 50
    tINT_TYPE     shift, and go to state 5
    tREAL_TYPE    shift, and go to state 6
    tSTRING_TYPE  shift, and go to state 7
    tVOID_TYPE    shift, and go to state 8
    tVAR          shift, and go to state 9
    tWHILE        shift, and go to state 51
    tIF           shift, and go to state 52
    tWRITE        shift, and go to state 53
    tWRITELN      shift, and go to state 54
    tINPUT        shift, and go to state 55
    tSTOP         shift, and go to state 56
    tAGAIN        shift, and go to state 57
    tRETURN       shift, and go to state 58
    tSIZEOF       shift, and go to state 59
    tNULL         shift, and go to state 60
    tNOT          shift, and go to state 61
    tWITH         shift, and go to state 62
    tSWEEP        shift, and go to state 63
    '+'           shift, and go to state 64
    '-'           shift, and go to state 65
    '('           shift, and go to state 66
    '['           shift, and go to state 67
    '@'           shift, and go to state 68
    '}'           shift, and go to state 119

    decl         go to state 35
    vardecl      go to state 15
    fundecl      go to state 16
    fun_call     go to state 70
    var          go to state 17
    type         go to state 18
    type_void    go to state 19
    type_func    go to state 20
    instrs       go to state 120
    instr        go to state 72
    block_instr  go to state 73
    expr         go to state 74
    lval         go to state 75
    string       go to state 76


State 70

  108 expr: fun_call .

    $default  reduce using rule 108 (expr)


State 71

   51 block: '{' instrs . '}'

    '}'  shift, and go to state 121


State 72

   54 instrs: instr .
   56       | instr . ';' instrs

    ';'  shift, and go to state 122

    $default  reduce using rule 54 (instrs)


State 73

   55 instrs: block_instr .
   57       | block_instr . instrs

    tINTEGER     shift, and go to state 47
    tREAL        shift, and go to state 48
    tIDENTIFIER  shift, and go to state 49
    tSTRING      shift, and go to state 50
    tWHILE       shift, and go to state 51
    tIF          shift, and go to state 52
    tWRITE       shift, and go to state 53
    tWRITELN     shift, and go to state 54
    tINPUT       shift, and go to state 55
    tSTOP        shift, and go to state 56
    tAGAIN       shift, and go to state 57
    tRETURN      shift, and go to state 58
    tSIZEOF      shift, and go to state 59
    tNULL        shift, and go to state 60
    tNOT         shift, and go to state 61
    tWITH        shift, and go to state 62
    tSWEEP       shift, and go to state 63
    '+'          shift, and go to state 64
    '-'          shift, and go to state 65
    '('          shift, and go to state 66
    '['          shift, and go to state 88
    '@'          shift, and go to state 68

    $default  reduce using rule 55 (instrs)

    fun_call     go to state 70
    instrs       go to state 123
    instr        go to state 72
    block_instr  go to state 73
    expr         go to state 74
    lval         go to state 75
    string       go to state 76


State 74

   29 fun_call: expr . '(' exprs ')'
   30         | expr . '(' ')'
   64 instr: expr .
   87 expr: expr . '+' expr
   88     | expr . '-' expr
   89     | expr . '*' expr
   90     | expr . '/' expr
   91     | expr . '%' expr
   92     | expr . '|' expr
   93     | expr . '&' expr
   94     | expr . '<' expr
   95     | expr . '>' expr
   96     | expr . tGE expr
   97     | expr . tLE expr
   98     | expr . tNE expr
   99     | expr . tEQ expr
  112 lval: expr . '[' expr ']'
